--- a/importfbx/packages.config
+++ b/importfbx/packages.config
@@ -1,7 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="openexr-msvc14-x64" version="2.2.0.7784" targetFramework="native" />
-  <package id="zlib" version="1.2.8.8" targetFramework="native" />
-  <package id="zlib.v120.windesktop.msvcstl.dyn.rt-dyn" version="1.2.8.8" targetFramework="native" />
-  <package id="zlib.v140.windesktop.msvcstl.dyn.rt-dyn" version="1.2.8.8" targetFramework="native" />
+  <package id="zlib-msvc14-x64" version="1.2.11.7795" targetFramework="native" />
 </packages>
